# net_package

./: README.md  pyproject.toml
src/scrape_net/: __init__.py  http_client.py  logging.py  proxy_pool.py  retry.py
tests/: test_http_client.py  test_proxy_pool.py  test_retry.py  test_retry_http_429.py  test_retry_logging.py  test_retry_proxy_failure.py  test_retry_proxy_rotation.py  test_retry_timeout.py
