[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-net"
version = "0.1.0"
description = "Reusable HTTP client with retry and proxy rotation for Python scrapers"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
